--- a/public/index.html
+++ b/public/index.html
@@ -7,24 +7,51 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Portfolio of Ibrohim Ruzmetov - Web Developer, Data Scientist, and Machine Learning Enthusiast."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- Social Sharing Meta Tags -->
+    <meta property="og:title" content="Ibrohim Ruzmetov | Portfolio" />
+    <meta property="og:description" content="Explore projects and skills of Ibrohim Ruzmetov, a passionate developer and data scientist." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://Ruzmetovv.42web.io/" />
+    <meta property="og:image" content="https://Ruzmetovv.42web.io/images/self.png" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Ibrohim Ruzmetov | Portfolio" />
+    <meta name="twitter:description" content="Explore projects and skills of Ibrohim Ruzmetov, a passionate developer and data scientist." />
+    <meta name="twitter:image" content="https://Ruzmetovv.42web.io/images/self.png" />
+
+    <!-- Schema.org Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Ibrohim Ruzmetov",
+        "url": "https://Ruzmetovv.42web.io/",
+        "sameAs": [
+          "https://instagram.com/Ibrokhim_rm",
+          "https://github.com/Rub4ik",
+          "https://twitter.com/Thatweix"
+        ],
+        "jobTitle": "Web Developer, Data Scientist",
+        "image": "https://Ruzmetovv.42web.io/images/self.png"
+      }
+    </script>
+
+    <title>Ibrohim Ruzmetov | Portfolio</title>
+
+    <!-- Google Analytics -->
+    <!-- Replace 'G-XXXXXXXXXX' with your own Measurement ID -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-XXXXXXXXXX');
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
